return List.of( method used in the student list